# Chess-piece

./: .gitignore  Cargo.toml  README.md  tauri.conf.json
crates/anti/: Cargo.toml
crates/anti/src/: lib.rs
crates/gui/: Cargo.toml
crates/gui/src/: main.rs
crates/packer/: Cargo.toml
crates/packer/src/: encryption.rs  generator.rs  lib.rs  main.rs  obfuscation.rs
crates/packer/src/templates/: callback.c.tpl  cmd_exec.c.tpl  decryption.c.tpl  deobfuscation.c.tpl  earlybird.c.tpl  fiber.c.tpl  loader.c.tpl  ntdll_unhook.c.tpl  syscall_stub.x64.asm  syscalls.c.tpl
crates/stub/: Cargo.toml
crates/stub/src/: main.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
ui/: index.html  main.js  style.css
