[package]
name = "stub"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
zstd = "0.13"
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_Memory", "Win32_System_LibraryLoader", "Win32_Security", "Win32_System_Diagnostics_Debug", "Win32_System_SystemServices", "Win32_Globalization", "Win32_System_WindowsProgramming", "Win32_System_ProcessStatus", "Win32_System_SystemInformation"] }
ntapi = "0.4"
lazy_static = "1.5.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
